# personal-site

./: Cargo.toml  Dioxus.toml  index.html  tailwind.config.js
.cargo/: config.toml
docs/: CNAME  index.html  output.css  personal-site-49e81b30803c9863.js  personal-site-49e81b30803c9863_bg.wasm  personal-site-55223173450500c.js  personal-site-55223173450500c_bg.wasm  personal-site-65b894bbaa7c5447.js  personal-site-65b894bbaa7c5447_bg.wasm  personal-site-9075e3986ed707.js  personal-site-9075e3986ed707_bg.wasm  personal-site-a50959daa0127369.js  personal-site-a50959daa0127369_bg.wasm  personal-site-f3b1bb370d006243.js  personal-site-f3b1bb370d006243_bg.wasm  personal-site.wasm
docs/assets/: output-dxh29e8ea8a202020bd.css  personal-site-dxh30768fc83b5ddd30.js  personal-site-dxh3da7f42c70a25a2b.js  personal-site_bg-dxh4f13958827e5b41e.wasm  personal-site_bg-dxh634ee5e03be96aff.wasm
docs/assets/dioxus/: my-cool-project.js  my-cool-project_bg.wasm  personal site.js  personal site_bg.wasm  personal-site.js
docs/assets/dioxus/snippets/dioxus-interpreter-js-1676574062e4c953/: inline0.js
docs/assets/dioxus/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
docs/assets/dioxus/snippets/dioxus-interpreter-js-d20e126dfa95ef37/: inline0.js
docs/assets/dioxus/snippets/dioxus-interpreter-js-dab579f08da5298b/: inline0.js
docs/snippets/dioxus-interpreter-js-459fb15b86d869f7/src/: interpreter.js
public/: output.css
src/: homepage.rs  main.rs  projects.rs
static/: index.html  output.css
static/assets/dioxus/: personal site_bg.wasm
static/assets/dioxus/snippets/dioxus-interpreter-js-2a9fdcda6a4621ea/: inline0.js
