[package]
name = "personal-site"
version = "0.1.0"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dioxus-web = { git = "https://github.com/dioxuslabs/dioxus" }
# dioxus = { git = "https://github.com/dioxuslabs/dioxus" }

dioxus_storage = { path = "d:/users/desktop/github/dioxus-storage" }
dioxus = { path = "C:/Users/Desktop/github/dioxus/packages/dioxus" }
dioxus-web = { path = "C:/Users/Desktop/github/dioxus/packages/web", features = ["hydrate"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
futures-util = "0.3.26"

# server side rendering
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-ssr = { path = "C:/Users/Desktop/github/dioxus/packages/ssr" }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
