[package]
name = "personal-site"
version = "0.1.0"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { git = "https://github.com/dioxuslabs/dioxus", features = [
    "fullstack",
    "router",
] }
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
futures-util = "0.3.26"
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = []
server = ["tokio", "dioxus/server"]
web = ["dioxus/web"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
